# parity

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  GEMINI.md  NOTICE  README.md  ROADMAP.md  compose.yaml  parity-spec.md  run_instrumentation.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  errors.py  extensions.py
backend/app/api/: __init__.py  _helpers.py  _rate_limits.py  _serializers.py  admin.py  attachments.py  expenses.py  health.py  payments.py  pending.py  recurring.py  relationships.py
backend/app/auth/: __init__.py  decorators.py  routes.py  security.py
backend/app/models/: __init__.py  _triggers.py  attachment.py  audit.py  auth_token.py  comment.py  device_token.py  expense.py  expense_share.py  password_reset_token.py  payment.py  recurring_expense.py  recurring_expense_share.py  relationship.py  user.py
backend/app/services/: __init__.py  account.py  admin.py  attachments.py  audit.py  balance.py  comments.py  devices.py  email_sender.py  expenses.py  notifications.py  object_store.py  password_reset.py  payments.py  push_sender.py  (+2 more)
backend/tests/: conftest.py  factories.py  test_account.py  test_admin.py  test_attachments.py  test_auth.py  test_balance.py  test_comments.py  test_config.py  test_devices.py  test_expenses.py  test_health.py  test_migrations.py  test_models.py  test_notifications.py  test_password_reset.py  test_payments.py  test_pending.py  test_rate_limit.py  test_recurring.py  test_relationships.py  test_triggers.py
(+130 files in other folders)
